Fix checkbox style on widget "ContentVisibilitySelect"

--- a/static/less/form.less
+++ b/static/less/form.less
@@ -176,6 +176,9 @@ input[type=checkbox], input[type=radio] {
     -webkit-appearance: none;
     position: relative;
     display: inline-block;
+    width: auto;
+    height: auto;
+    min-height: auto;
     padding: 7px;
     margin: -4px 2px 0 0;
     vertical-align: middle;
